# edu-ai

./: .gitignore  README.md  docker-compose.yml  tmp_pdf_text.txt
backend/: .env.example  Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt  seed.py
backend/agent_core/: agent_base.py  llm_provider.py  rag_chain.py
backend/alembic/: env.py
backend/alembic/versions/: 4d4c0f6d9f6b_add_processing_status_to_course_resources.py  7a1f9a0e2b3c_change_embedding_dimension_to_1024.py  ce7d7666077c_init_tables.py
backend/api/routes/: agents.py  analytics.py  assignments.py  auth.py  chat.py  courses.py  exercises.py  platform.py
backend/core/: config.py  database.py  security.py  storage.py
backend/education/: analytics_engine.py  exercise_engine.py
backend/models/: __init__.py  agent.py  assignment.py  chat.py  course.py  exercise.py  learning.py  platform.py  user.py
backend/script/: check_env.py  dev.cmd  evaluate_mcq_checklist.py  migrate.cmd  test_llm.py  test_rag_retrieval.py  worker.cmd
backend/workers/: celery_app.py  embedding_task.py  grading_task.py
data/: test-dataStructure.docx
data/dataStructure/: datastructure-checklist.md  datastructure-eval-results.json
data/计算机科学与技术专业导论（实验报告）/: Excel实验原始素材文件.xlsx  Excel实验报告-批改.docx
data/面向对象程序设计（Java）（作业）/: 对象与类作业-批改.doc
docs/: Intro.md  Project Charter-冯俊财.md  Project Charter.md  eduai-excel-gantt-high-level-critical.xlsx  frontend-design.md  gant.md  m2-qa-checklist.md  plan.md  ppt.md  rbs-wbs-schedule-diagrams.md  repo.md
docs/postman/: eduai-local.postman_collection.json  eduai-local.postman_environment.json
docs/test-reports/: 2026-04-22-系统测试报告-v0.1.0.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/Layout/: MainLayout.tsx
frontend/src/hooks/: useAuthStore.ts
frontend/src/pages/AgentBuilder/: index.tsx
frontend/src/pages/Analytics/: index.tsx
frontend/src/pages/Assignment/: index.tsx
frontend/src/pages/Chat/: index.tsx
frontend/src/pages/CourseManage/: index.tsx
frontend/src/pages/Dashboard/: index.tsx
frontend/src/pages/Exercises/: index.tsx
frontend/src/pages/GradingResult/: index.tsx
frontend/src/pages/Login/: index.tsx
frontend/src/pages/PlatformConfig/: index.tsx
frontend/src/pages/Widget/: index.tsx
frontend/src/services/: api.ts
hw3/: README.md  experiments.py  hierarchical.py  kmeans.py  report.md  spectral.py
hw3/results/: results.json
