[project]
name = "edu-ai-platform"
version = "0.1.0"
description = "可嵌入式跨课程AI Agent通用架构平台"
requires-python = ">=3.11"
dependencies = [
    # Web框架
    "fastapi>=0.115.0,<0.116.0",
    "uvicorn[standard]>=0.30.0,<0.31.0",
    "python-multipart>=0.0.9,<0.1.0",
    "python-jose[cryptography]>=3.3.0,<3.4.0",
    "passlib[bcrypt]>=1.7.4,<1.8.0",
    "bcrypt>=4.0.1,<4.1.0",
    # 数据库
    "sqlalchemy>=2.0.43,<2.1.0",
    "asyncpg>=0.29.0,<0.30.0",
    "alembic>=1.18.4,<1.19.0",
    "pgvector>=0.3.6,<0.4.0",
    # Redis & Celery
    "redis>=5.0.8,<5.1.0",
    "celery[redis]>=5.4.0,<5.5.0",
    # LLM & AI
    "langchain>=0.3.27,<0.4.0",
    "langchain-community>=0.3.29,<0.4.0",
    "langchain-openai>=0.3.35,<0.4.0",
    "langsmith>=0.4.38,<0.5.0",
    "dashscope>=1.24.2,<1.25.0",
    "zhipuai>=2.1.5.20250825,<2.2.0",
    "openai>=1.109.1,<2.0.0",
    # 文档解析
    "python-docx>=1.1.2,<1.2.0",
    "PyPDF2>=3.0.1,<3.1.0",
    "python-pptx>=1.0.2,<1.1.0",
    "tiktoken>=0.11.0,<0.12.0",
    # 文件存储
    "minio>=7.2.18,<7.3.0",
    # 工具
    "pydantic>=2.12.4,<3.0.0",
    "pydantic-settings>=2.12.0,<3.0.0",
    "email-validator>=2.3.0,<3.0.0",
    "httpx>=0.28.1,<0.29.0",
    "sse-starlette>=3.0.2,<3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9.0.0",
    "pytest-asyncio>=1.2.0,<2.0.0",
    "httpx>=0.28.1,<0.29.0",
    "ruff>=0.12.0,<0.13.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"
