[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edu-ai-platform"
version = "0.1.0"
description = "可嵌入式跨课程AI Agent通用架构平台"
requires-python = ">=3.11"
dependencies = [
    # Web框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # 数据库
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",
    # Redis & Celery
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    # LLM & AI
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langsmith>=0.1.0",
    "dashscope>=1.20.0",
    "zhipuai>=2.1.0",
    "openai>=1.40.0",
    # 文档解析
    "python-docx>=1.1.0",
    "PyPDF2>=3.0.0",
    "python-pptx>=0.6.23",
    "tiktoken>=0.7.0",
    # 文件存储
    "minio>=7.2.0",
    # 工具
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.setuptools]
# This project is run as an app from repository root.
# Disable auto package discovery in flat-layout to avoid editable install errors.
py-modules = []
